--- a/index.htm
+++ b/index.htm
@@ -5,19 +5,16 @@
   <meta content="World through mean-images">
   <title>World through the lens of mean images </title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="keyboard.js" type="text/javascript"></script>
   </head>
   <body>
-    <section>
-      <header>
-        <h1>World, explained through mean images</h1>
-      </header>
-    </section>
     
     <section class="title page" id="1">
       <div>
         <h2>Vogue</h2>
         <div class="magazine women">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -26,7 +23,7 @@
       <div>
         <h2>Men's Vogue</h2>
         <div class="magazine men">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -35,7 +32,7 @@
       <div>
         <h2>Women's health</h2>
         <div class="magazine women">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -44,7 +41,7 @@
       <div>
         <h2>Men's health</h2>
         <div class="magazine men">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -53,16 +50,16 @@
       <div>
         <h2>Time</h2>
         <div class="magazine politics">
-          placeholder for image (grid or carousel gallery)
-        </div>
+          <p>placeholder for image (grid or carousel gallery)</p>
+        </div>/
       </div>
-    </section
+    </section>
       
     <section class="history page" id="6">
       <div>
         <h2>New Yorker</h2>
         <div class="magazine politics">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -71,7 +68,7 @@
       <div>
         <h2>GQ</h2>
         <div class="magazine politics">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
@@ -80,7 +77,7 @@
       <div>
         <h2>Esquire</h2>
         <div class="magazine politics">
-          placeholder for image (grid or carousel gallery)
+          <p>placeholder for image (grid or carousel gallery)</p>
         </div>
       </div>
     </section>
