--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Mean Images</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,900">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/jquery.mousewheel.min.js"></script>
@@ -57,7 +57,7 @@
                 <section id="sec03" class="mod-singular-section"><div class="mod-singular-section-in">
                     <h2 class="mod-singular-hdng">An "average" face?</h2>
                     <div class="container">
-                    <img src="/images/cropped_yale.gif" width="700">
+                    <img src="images/cropped_yale.gif" width="700">
                     <p class="mod-singular-txt-3 bottom-right">The <a href="http://academictorrents.com/details/aad8bf8e6ee5d8a3bf46c7ab5adfacdd8ad36247" target="_blank">Cropped Yale Dataset</a> is a widely-used dataset for machine learning and image processing research. The dataset contains 16128 images of 28 human subjects in 9 poses and 64 illumination conditions. It’s popularity is due in part to its high-quality alignment of facial features which allows the "mean" image of thousands of images to resemble a single face. <br><br> Interestingly, the more images that are used to compute the average face, the slower the rate of change in the mean image. That is, the average image tends to converge fairly quickly (between 20 and 50 images). See for yourself below! 
                     </p>
                     </div>
