--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
                         <div class="grid-item">
                             <input class="slider-width" id="valR" type="range" min="0" max="5" value="0" step="1" oninput="showVal(this.value)" onchange="showVal(this.value)" />
                             <span id="range">0</span>
+                            <div class="grid-item face-number">
                             <span id="realval">10</span>
                             <span id="">faces</span>
+                            </div>
                         </div>  
-                        <div class="grid-item">2414 faces</div> 
+                        <div class="grid-item face-number fn2">2414 faces</div> 
                     </div>
 
 
