--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ $(function() {
                             .html("Welcome to today. Can you spot this cover? ;)");
                                     $(".feature-img img").remove();
                         $(".feature-img").animate({opacity: '1'},"fast")
-                        .prepend('<img id="tr*mp" src="./images/trump.jpg" style="width:200px" style="width:350px" />');
+                        .prepend('<img id="tr*mp" src="./images/trump.jpg" style="width:200px" style="width:250px" />');
 //                                    $(".feature-img img").remove();
 
                     }
@@ -515,8 +515,8 @@ $(function() {
     <!--page_7 Exploratory-->  
     <section id="sec07" class="mod-singular-section">
       <div class="mod-singular-section-in">
-        <h2 class="mod-singular-hdng">More mean images!</h2>
-          <h3>Put your mouse over the images to find out what the topics are.</h3>
+        <h2 class="mod-singular-hdng">Explore more mean images</h2>
+          <h3>Hover over the images below to discover topic.</h3>
           <div class="exploratory">
             <a href="http://www.laurainthekitchen.com/recipe-category.php?category=BEVERAGE" class="ex-container  Beverage.jpg" target="_blank">
                 <img src="images/exploratory/Beverage.jpg" height="200" class="exploratory-photo food">
