minor styling sd

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $(function() {
                 <p class="mod-singular-txt-2">
                   This project is inspired by the artwork of contemporary artist <a href="http://www.salavon.com" target="_blank">Jason Salavon</a> whose series <a href="http://salavon.com/work/SpecialMoments/" target ="_blank">"100 Special Moments”</a> is shown below. Salavon is known for using computer software to reconfigure existing media into fine art. His series on averaged images straddles the boundary between art and data visualization, often revealing <em>intuitive, and never-before-seen patterns</em> in the pixels captured in photographs.
                 </p>
-              <p><em>Put your mouse over the images to find out what the topics are!</em></p>
+              <p><em>Hover over the images to see more</em></p>
                 <div class="salavon-grid">
                     <a href="http://salavon.com/work/SpecialMoments/" target="_blank">
                         <img src="images/salavon/100moments-1.jpg" height="200" class="salavon-photo" id="S-1"></a>
